make api more consistent
