# api/v1/oas_request_encoders_gen.go
@@ -12,7 +12,7 @@ import (
 )
 
 func encodeAddPersonRequest(
-	req *Person,
+	req *AddPersonRequest,
 	r *http.Request,
 ) error {
 	const contentType = "application/json"
